Cross platform fix for XSLT file